# skerrible

./: .gitignore  Dockerfile  LICENSE  README.md  build-using-docker.sh  build.sh  config.nix  default.nix  docker.sh  push-aws.sh  server-client.cabal  skerrible.cabal  skerrible.nix
protocol/: Protocol.hs
server/: Game.hs  Main.hs
server/src/: Game.hs  Main.hs  Version.hs
server/tests/: test.hs
static-root/: driver.js  elm.js  index.html  media
terraform/: .gitignore  load_balancer.tf  main.tf  network.tf  outputs.tf  skerrible.tf  variables.tf
web-client/: .gitignore  build.sh  default.nix  driver.js  elm-srcs.nix  index.html  make-media.sh  web-client.nix
web-client/src/: Board.elm  DictTile.elm  FlagsParser.elm  Key.elm  KeyHandler.elm  LocationParser.elm  Main.elm  Model.elm  Move.elm  Msg.elm  Ports.elm  UrlParser.elm  View.elm
