cabal-version:       2.4

name:                skerrible
version:             0.1.0.0
synopsis:            terrible word game
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ben Millwood
maintainer:          thebenmachine+git@gmail.com
-- copyright:
-- category:
-- extra-source-files:

library
  exposed-modules:
    Protocol
  ghc-options:         -Wall
  build-depends:
    aeson,
    base,
    containers,
    text
  hs-source-dirs:      protocol
  default-language:    Haskell2010

executable skerrible-server
  main-is:             Main.hs
  other-modules:       Game
  -- other-extensions:
  ghc-options:         -Wall
  build-depends:
    skerrible,
    aeson,
    async,
    base,
    bytestring,
    containers,
    lens,
    random,
    text,
    transformers,
    wai,
    wai-app-static,
    wai-websockets,
    warp,
    websockets
  hs-source-dirs:      server/src
  default-language:    Haskell2010

test-suite server-tests
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  other-modules:       Game
  ghc-options:         -Wall
  build-depends:
    skerrible,
    base,
    containers,
    random,
    transformers,
    HUnit
  hs-source-dirs:
    server/src
    server/tests
  default-language:    Haskell2010
